remove Item.is_loot
